# PPGEE0018

./: .gitignore  fft.py  main.py  pyproject.toml
Atividades/: atividade1.ipynb  atividade2.ipynb
