[project]
name = "ppgee0018"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "emd>=0.8.1",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "pywavelets>=1.9.0",
    "ruff>=0.13.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
]
